--- a/_config.yml
+++ b/_config.yml
@@ -37,12 +37,13 @@ url: "https://papierkorp.github.io" # the base hostname & protocol for your site
 github_username: papierkorp
 
 # Build settings
-theme: jekyll-theme-horizon-flow
+remote_theme: papierkorp/jekyll-theme-horizon-flow
 plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-seo-tag
   - jekyll-sitemap
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
